--- a/dogtax.html
+++ b/dogtax.html
@@ -13,7 +13,6 @@
         <title>Dog Tax: Mango the one-eyed golden retriever</title>
     </head>
     <body>
-        <img src="/assets/Dog Tax-Mango Reel.gif">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/tl9nVK5Lx1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7tt1k6vyrf8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
