--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="box-one"></div>
             <div class="box-two">
                 <div class="img-container">
-                    <img src="assets/portrait.jpg" class="portrait" alt="portrait of Spencer" />
+                    <img src="assets/portrait.png" class="portrait" alt="portrait of Spencer" />
                 </div>
                 <div class="content-container">
                     <h1>< Hello World! />
