--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <br/>
-            <p class="credit">&copy; Copyright 2023</p>
+            <p class="credit">&copy; Copyright 2023 <a href="impressum.html" class="impressum" target="_blank"> - Impressum</a></p>
             <p>Designed and developed by Spencer Utt</p>
             <a href="#showcase"><span class="material-icons arrow-up"> keyboard_arrow_up </span></a>
         </footer>
